--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,6 +11,11 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+     <!--FONT AWESOME-->
+     <script
+      src="https://kit.fontawesome.com/6d1a3ae1e1.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Dog Rescue</title>
   </head>
   <body>
