home and header

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,6 +16,11 @@
       src="https://kit.fontawesome.com/6d1a3ae1e1.js"
       crossorigin="anonymous"
     ></script>
+    <!-- Google Fonts -->
+    <!-- Gochi Hand -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gochi+Hand&display=swap" rel="stylesheet">
     <title>Dog Rescue</title>
   </head>
   <body>
